fixed whitespace

--- a/src/index.scss
+++ b/src/index.scss
@@ -150,4 +150,15 @@ body {
 }
 .chat-end .chat-header,
 .chat-end .chat-footer {
-  grid-column
+  grid-column-start:1
+}
+.chat-end .chat-image {
+  grid-column-start:2
+}
+.chat-end .chat-bubble {
+  grid-column-start:1;
+  border-bottom-right-radius:0
+}
+.chat-end .chat-bubble:before {
+  -webkit-mask-image:url("data:image/svg+xml,%3csvg width='3' height='3' xmlns='http://www.w3.org/2000/svg'%3e%3cpath fill='black' d='m 0 3 L 1 3 L 3 3 C 2 3 0 1 0 0'/%3e%3c/svg%3e");
+  mask-image:url("dat
